# solana-demos

./: LICENSE  README.md
01-access-mainnet-account-by-surfpool/: Cargo.toml  README.md  callProgram.ts  package-lock.json  package.json
01-access-mainnet-account-by-surfpool/src/: lib.rs
02-counter-dapp/: README.md  package.json  pnpm-lock.yaml
02-counter-dapp/anchor/: Anchor.toml
02-counter-dapp/anchor/programs/counter/src/: error.rs  lib.rs
02-counter-dapp/anchor/src/: counter-exports.ts
02-counter-dapp/src/app/: globals.css  layout.tsx  page.tsx
02-counter-dapp/src/app/pdacounter/: page.tsx
02-counter-dapp/src/components/: app-header.tsx  app-layout.tsx  theme-provider.tsx
02-counter-dapp/src/components/account/: account-data-access.tsx
02-counter-dapp/src/components/cluster/: cluster-data-access.tsx  cluster-ui.tsx
02-counter-dapp/src/components/counter/: counter-data-access.tsx  counter-ui.tsx
02-counter-dapp/src/components/dashboard/: dashboard-feature.tsx
02-counter-dapp/src/components/pdacounter/: CounterDisplay.tsx  ToastContent.tsx  pdacounter-data-access.tsx  pdacounter-feature.tsx  pdacounter-ui.tsx
02-counter-dapp/src/components/pdacounter/hooks/: useTransactionToast.tsx
native-dev/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
native-dev/client/: helloworld.ts  movies_review.ts
native-dev/src/: error.rs  lib.rs
native-dev/src/instructions/: mod.rs  movies_review.rs
native-dev/src/state/: mod.rs  movies.rs
native-dev/tests/: movie_review.ts
native-dev/tests/utils/: initialize_mint.ts
(+5 files in other folders)
