[package]
name = "native-dev"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = "1.5.7"
solana-program = "2.3.0"
# If no-entry omitted, Report error: the `#[global_allocator]` in this crate conflicts with global allocator in: spl_associated_token_account
spl-associated-token-account = {version="7.0.0", features = ["no-entrypoint"]}
spl-token = {version="8.0.0", features = ["no-entrypoint"]}
thiserror = "2.0.16"
